--- a/public/css/top.css
+++ b/public/css/top.css
@@ -539,13 +539,23 @@ h1 + p {
 /* ----- bottom-container ----- */
 #bottom-container {
     width: 100%;
-    height: 1753px;
+    height: 1570px;
     display: block !important;
     justify-content: center;
     align-items: center;
     text-align: left !important;
     background: linear-gradient(#355469 0%, #1b2a35 100%);
     overflow: hidden;
+}
+@media (max-width: 860px) {
+    #bottom-container {
+        height: 1555px;
+    }
+}
+@media (max-width: 599px) {
+    #bottom-container {
+        height: 1550px;
+    }
 }
 /* bottom-tp */
 .bottom-tp {
