--- a/public/css/top.css
+++ b/public/css/top.css
@@ -562,28 +562,78 @@ h1 + p {
     max-width: 1197px;
     display: flex;
     justify-content: space-between;
-    padding-top: 303px;
-    padding-left: 63px;
+    padding-top: 275px;
+    padding-left: 110px;
     margin: 0 auto;
 }
+@media (max-width: 1030px) {
+    .bottom-tp {
+        max-width: 800px;
+        padding-left: 0;
+    }
+}
+@media (max-width: 860px) {
+    .bottom-tp {
+        max-width: 400px;
+        padding-top: 120px;
+        flex-direction: column;
+    }
+}
+@media (max-width: 599px) {
+    .bottom-tp {
+        max-width: 300px;
+    }
+}
 .bottom-tp-left {
-    margin-top: 60px;
-    font-size: 24px;
+    margin-top: 52px;
+    font-size: 23px;
     color: #fff;
+}
+@media (max-width: 860px) {
+    .bottom-tp-left {
+        order: 2;
+    }
+}
+@media (max-width: 599px) {
+    .bottom-tp-left {
+        font-size: 20px;
+    }
 }
 .bottom-tp-left > p {
     line-height: 1.7;
 }
 .bottom-tp-left > p + p {
-    margin-top: 48px;
+    margin-top: 35px;
 }
 .bottom-tp-right {
     position: static;
     width: 580px;
     z-index: 10;
 }
+@media (max-width: 1030px)
+{
+    .bottom-tp-right {
+        width: 400px;
+    }
+}
+@media (max-width: 1030px)
+{
+    .bottom-tp-right {
+        order: 1;
+    }
+}
 .bottom-tp-right img {
-    width: 100%;
+    width: 515px;
+}
+@media (max-width: 1030px) {
+    .bottom-tp-right img {
+        width: 400px;
+    }
+}
+@media (max-width: 599px) {
+    .bottom-tp-right img {
+        width: 300px;
+    }
 }
 /* bottom-bt */
 .bottom-bt {
