--- a/public/css/top.css
+++ b/public/css/top.css
@@ -638,27 +638,114 @@ h1 + p {
 /* bottom-bt */
 .bottom-bt {
     position: relative;
-    margin-top: 462px;
+    margin-top: 400px;
+}
+@media (max-width: 599px) {
+    .bottom-bt {
+        margin-top: 500px;
+    }
 }
 .bottom-bt::before {
     position: absolute;
     content: "";
-    top: -573px;
-    right: -220px;
-    width: 800px;
-    height: 800px;
+    top: -495px;
+    right: -200px;
+    width: 720px;
+    height: 720px;
     border: 1px solid #fce4e7;
     border-radius: 50%;
+}
+@media (max-width: 1250px) {
+    .bottom-bt::before {
+        width: 680px;
+        height: 680px;
+        right: -260px;
+    }
+}
+@media (max-width: 1050px) {
+    .bottom-bt::before {
+        width: 630px;
+        height: 630px;
+        top: -460px;
+        right: -315px;
+    }
+}
+@media (max-width: 950px) {
+    .bottom-bt::before {
+        width: 500px;
+        height: 500px;
+        top: -330px;
+        right: -265px;
+    }
+}
+@media (max-width: 950px) {
+    .bottom-bt::before {
+        width: 400px;
+        height: 400px;
+        top: -250px;
+        right: -180px;
+    }
+}
+@media (max-width: 599px) {
+    .bottom-bt::before {
+        width: 260px;
+        height: 260px;
+        top: -180px;
+        right: -135px;
+    }
 }
 .bottom-bt::after {
     position: absolute;
     content: "";
-    top: -353px;
-    left: -247px;
-    width: 800px;
-    height: 800px;
+    top: -300px;
+    left: -267px;
+    width: 720px;
+    height: 720px;
     border: 1px solid #fce4e7;
     border-radius: 50%;
+}
+@media (max-width: 1250px) {
+    .bottom-bt::after {
+        width: 680px;
+        height:  680px;
+    }
+}
+@media (max-width: 1050px) {
+    .bottom-bt::after {
+        width: 630px;
+        height:  630px;
+    }
+}
+@media (max-width: 950px) {
+    .bottom-bt::after {
+        width: 500px;
+        height:  500px;
+        top: -170px;
+        left: -230px;
+    }
+}
+@media (max-width: 860px) {
+    .bottom-bt::after {
+        width: 400px;
+        height:  400px;
+        top: -120px;
+        left: -160px;
+    }
+}
+@media (max-width: 710px) {
+    .bottom-bt::after {
+        width: 400px;
+        height:  400px;
+        top: -160px;
+    }
+}
+@media (max-width: 599px) {
+    .bottom-bt::after {
+        width: 260px;
+        height:  260px;
+        top: -400px;
+        left: -110px;
+    }
 }
 .bottom-bt-contents {
     display: inline-block;
@@ -666,39 +753,142 @@ h1 + p {
     top: 91px;
     left: 50%;
     transform: translateX(-52%);
+    z-index: 10;
+}
+@media (max-width: 860px) {
+    .bottom-bt-contents {
+        transform: translateX(-35%);
+    }
+}
+@media (max-width: 860px) {
+    .bottom-bt-contents img {
+        width: 80%;
+        text-align: center;
+    }
 }
 .bottom-bt-contents::after {
     position: absolute;
     content: "";
-    bottom: -827px;
-    right: -473px;
-    width: 800px;
-    height: 800px;
+    bottom: -745px;
+    right: -407px;
+    width: 720px;
+    height: 720px;
     border: 1px solid #fce4e7;
     border-radius: 50%;
 }
+@media (max-width: 1250px) {
+    .bottom-bt-contents::after {
+        width: 680px;
+        height: 680px;
+        right:  -350px;
+    }
+}
+@media (max-width: 1050px) {
+    .bottom-bt-contents::after {
+        width: 630px;
+        height: 630px;
+        right:  -335px;
+        bottom: -680px;
+    }
+}
+@media (max-width: 950px) {
+    .bottom-bt-contents::after {
+        width: 500px;
+        height: 500px;
+        right:  -275px;
+        bottom: -520px;
+    }
+}
+@media (max-width: 860px) {
+    .bottom-bt-contents::after {
+        width: 400px;
+        height: 400px;
+        right:  -110px;
+        bottom: -450px;
+    }
+}
+@media (max-width: 599px) {
+    .bottom-bt-contents::after {
+        width: 260px;
+        height: 260px;
+        right:  45px;
+        bottom: -280px;
+    }
+}
 .bt-contents-search {
     position: absolute;
-    top: -97px;
-    left: -225px;
+    top: -85px;
+    left: -185px;
+}
+@media (max-width: 860px) {
+    .bt-contents-search {
+        left: -210px;
+    }
+}
+@media (max-width: 710px) {
+    .bt-contents-search {
+        left: -155px;
+    }
+}
+@media (max-width: 599px) {
+    .bt-contents-search {
+        top: -350px;
+        left: -40px;
+    }
 }
 .bt-contents-memory {
     position: absolute;
-    top: -35px;
-    right: -254px;
+    top: -28px;
+    right: -230px;
+}
+@media (max-width: 860px) {
+    .bt-contents-memory {
+        right: -130px;
+    }
+}
+@media (max-width: 760px) {
+    .bt-contents-memory {
+        right: -80px;
+    }
+}
+@media (max-width: 599px) {
+    .bt-contents-memory {
+        width: 100%;
+        top: -140px;
+        right: 50px;
+    }
 }
 .bt-contents-memo {
     position: absolute;
-    bottom: -126px;
-    right: 53px;
+    bottom: -130px;
+    right: 50px;
     z-index: 10;
+}
+@media (max-width: 860px) {
+    .bt-contents-memo {
+        width: 100%;
+        right: 15px;
+    }
+}
+@media (max-width: 599px) {
+    .bt-contents-memo {
+        bottom: -120px;
+        right: auto;
+    }
 }
 .bt-contents-search p,
 .bt-contents-memory p,
 .bt-contents-memo p {
     color: #fff;
-    font-size: 25px;
+    font-size: 24px;
     text-shadow: 4px 3px 2px rgba(0, 0, 0);
+}
+@media (max-width: 860px) {
+    .bt-contents-search p,
+    .bt-contents-memory p,
+    .bt-contents-memo p {
+        font-size: 20px;
+    }
 }
 .bt-contents-search p a,
 .bt-contents-memory p a,
@@ -707,6 +897,13 @@ h1 + p {
     text-decoration: none;
     font-size: 23px;
     transition: all 0.5s;
+}
+@media (max-width: 860px) {
+    .bt-contents-search p a,
+    .bt-contents-memory p a,
+    .bt-contents-memo p a {
+        font-size: 20px;
+    }
 }
 .bt-contents-search p a:hover,
 .bt-contents-memory p a:hover,
