--- a/public/css/top.css
+++ b/public/css/top.css
@@ -63,8 +63,20 @@ body {
           .main-top
 -------------------------------- */
 /* ナビバー */
+/* .navbar {
+    margin-top: 20px;
+} */
 .navbar .container {
     max-width: 1320px;
+    height: 100px;
+    display: flex;
+}
+#navbarSupportedContent {
+    display: flex;
+    align-items: center;
+}
+.navbar-nav {
+    display: flex;
 }
 .navbar-expand-md {
     height: 100px;
@@ -82,6 +94,8 @@ body {
 .navbar-light .navbar-nav .nav-link {
     color: #FCE4E7;
     transition: all 0.5s;
+    margin: auto 0;
+    text-decoration: none;
 }
 .navbar-light .navbar-brand:hover,
 .navbar-light .navbar-nav .nav-link:hover {
@@ -90,6 +104,7 @@ body {
 }
 .navbar-light .navbar-nav.auth .nav-link {
     color: #FCE4E7;
+    text-decoration: none;
 }
 .navbar-light .navbar-nav.auth .nav-link.dropdown-toggle {
     font-size: 20px;
@@ -105,6 +120,8 @@ body {
 }
 .navbar-expand-md .navbar-nav .nav-item:first-child {
     margin-left: 30px;
+}
+.navbar-expand-md .navbar-nav .nav-item {
     margin-right: 20px;
 }
 .navbar-light .navbar-nav.auth .nav-link {
