--- a/public/css/top.css
+++ b/public/css/top.css
@@ -62,20 +62,27 @@ body {
 /* --------------------------------
           .main-top
 -------------------------------- */
-/* ナビバー */
-/* .navbar {
-    margin-top: 20px;
-} */
+.main-top {
+    position: relative;
+    display: flex;
+}
+.main-top::after {
+    content: url(../img/top_man.png);
+    position: absolute;
+    top: 492px;
+    left: 23px;
+}
+/* top-left */
 .top-left {
     position: relative;
-    /* width: 78%; */
+    width: 78%;
     height: 79vh;
     background-color: #355469;
 }
 .top-left nav {
     position: absolute;
     z-index: 10;
-    /* width: 100%; */
+    width: 100%;
     height: 100px;
     margin: 0 auto;
     font-family: "Hiragino Kaku Gothic ProN";
@@ -150,420 +157,36 @@ h1 + p {
     font-size: 21px;
     text-shadow: 4px 3px 2px rgba(0, 0, 0);
 }
-.navbar .container {
-    max-width: 1320px;
-    height: 100px;
-    display: flex;
-}
-@media (max-width: 500px) {
-    .navbar .container {
-        flex-direction: column;
-        height: 150px;
-    }
-}
-#navbarSupportedContent {
-    display: flex;
-    align-items: center;
-}
-@media (max-width: 500px) {
-    #navbarSupportedContent {
-        flex-direction: column;
-        align-items: flex-end;
-    }
-}
-.navbar-nav {
-    display: flex;
-}
-@media (max-width: 500px) {
-    .navbar-nav {
-        flex-direction: column;
-    }
-}
-.navbar-expand-md {
-    height: 100px;
-    background-color: inherit !important;
-}
-@media (max-width: 599px) {
-    .navbar-expand-md {
-        height: 70px;
-    }
-}
-.navbar-light .navbar-toggler {
-    background-color: rgba(255, 255, 255, 0.5);
-}
-.navbar-light .navbar-brand,
-.navbar-light .navbar-nav .nav-link {
-    color: #FCE4E7;
-    transition: all 0.5s;
-    margin: auto 0;
-    text-decoration: none;
-}
-.navbar-light .navbar-brand:hover,
-.navbar-light .navbar-nav .nav-link:hover {
-    color: #FCE4E7;
-    opacity: 0.7;
-}
-.navbar-light .navbar-nav.auth .nav-link {
-    color: #FCE4E7;
-    text-decoration: none;
-}
-.navbar-light .navbar-nav.auth .nav-link.dropdown-toggle {
-    font-size: 20px;
-}
-.navbar-brand {
-    font-family: "せのびレギュラー";
-    font-size: 25px;
-    text-shadow: 3px 3px 3px black;
-}
-@media (max-width: 768px) {
-    .navbar-brand {
-        font-size: 15px;
-    }
-}
-.navbar-light .navbar-nav .nav-link {
-    font-family: "Hiragino Kaku Gothic ProN";
-    font-size: 17px;
-}
-.navbar-expand-md .navbar-nav .nav-item:first-child {
-    margin-left: 30px;
-}
-.navbar-expand-md .navbar-nav .nav-item {
-    margin-right: 20px;
-}
-@media (max-width: 768px) {
-    .navbar-expand-md .navbar-nav .nav-item {
-        margin-right: 0;
-    }
-}
-.navbar-light .navbar-nav.auth .nav-link {
-    font-family: "Hiragino Kaku Gothic ProN";
-    font-size: 17px;
-}
-/* @media (max-width: 768px) {
-    .navbar-light .navbar-nav.auth .nav-link {
-        font-size: 13px;
-    }
-} */
-.navbar-expand-md .navbar-nav.auth .nav-item:first-child {
-    margin-left: 0;
-    margin-right: 10px;
-}
-.dropdown-menu {
-    padding: 0;
-    min-width: 8rem;
-}
-.dropdown-item {
-    padding: 0.5rem 0;
-    font-family: "Hiragino Kaku Gothic ProN";
-    text-align: center;
-    border: 1px solid rgba(0, 0, 0, 0.15);
-}
-.dropdown-item:first-child:hover {
-    border-radius: 0.25rem 0.25rem 0 0;
-}
-.dropdown-item:nth-child(2):hover {
-    border-radius: 0 0 0.25rem 0.25rem;
-}
-.navbar-expand-md .navbar-nav .nav-item hr {
-    display: none;
-}
-.navbar-nav .dropdown-toggle::after {
-    content: none;
-}
-.sp {
-    display: none;
-}
-@media(max-width: 767px) {
-    .navbar {
-        padding: 0;
-    }
-    .navbar-light .navbar-brand {
-        margin-left: 3%;
-    }
-    .navbar-light .navbar-toggler {
-        margin-right: 3%;
-    }
-    .navbar-collapse {
-        width: 100%;
-        background-image: url('../img/nav-bg.jpg');
-        background-position: center;
-        z-index: 100;
-        filter: grayscale(80%);
-    }
-    .navbar-expand-md .navbar-nav {
-        margin-left: 0 !important;
-    }
-    .navbar-expand-md .navbar-nav .nav-item:first-child {
-        margin: 0;
-    }
-    .navbar-expand-md .navbar-nav .nav-item hr {
-        display: block;
-        border-top: 1px solid #fff;
-        margin: 0;
-        opacity: .4;
-    }
-    .navbar-light .navbar-nav.auth .nav-item:last-child {
-        border-bottom: none;
-    }
-    .navbar-expand-md .navbar-nav.auth .nav-item:first-child {
-        margin: 0;
-    }
-    .navbar-light .navbar-nav .nav-link {
-        padding: 1.5em;
-        opacity: 1;
-        font-size: 13px;
-        text-decoration: none;
-
-    }
-}
-@media (max-width: 767px) {
-    .pc {
-        display: none;
-    }
-    .sp {
-        display: block;
-    }
-    .navbar-expand-md .navbar-nav.sp {
-        position: absolute;
-        right: 100px;
-    }
-    .navbar-expand-md .navbar-nav.sp .nav-item {
-        border: none;
-    }
-    .navbar-light .navbar-nav.sp .nav-link {
-        padding: 0;
-        color: #fce4e7;
-        font-size: 30px;
-    }
-    .navbar-light .navbar-nav.auth .nav-link {
-        font-size: 13px;
-        padding: 15px;
-    }
-    .navbar-nav .dropdown-item {
-        padding: 1em;
-    }
-    .navbar-light .navbar-nav.auth .nav-link.dropdown-toggle .fas {
-        margin-right: 8px;
-    }
-}
-
-@media (max-width: 500px) {
-    .navbar-light .navbar-nav.auth .nav-link {
-        margin-bottom: 10px;
-    }
-}
-/* main-top */
-
-.main-top-bg {
-    width: 100%;
-    height: 79vh;
-    background: linear-gradient(90deg, #355469 74%, #baa68b 0%, #baa68b 100%);
-}
-@media (max-width: 1030px) {
-    .main-top-bg {
-        height: 600px;
-    }
-}
-@media (max-width: 880px) {
-    .main-top-bg {
-        background: linear-gradient(90deg, #355469 70%, #baa68b 0%, #baa68b 100%);
-    }
-}
-@media (max-width: 760px) {
-    .main-top-bg {
-        background: linear-gradient(90deg, #355469 65%, #baa68b 0%, #baa68b 100%);
-    }
-}
-@media (max-width: 660px) {
-    .main-top-bg {
-        height: 650px;
-        background: linear-gradient(180deg, #355469 65%, #baa68b 0%, #baa68b 100%);
-    }
-}
-.main-top-container {
-    position: relative;
-    /* max-width: 1320px; */
-    margin: 0 auto;
-}
-.top-container {
-    display: flex;
-    justify-content: space-between;
-}
-@media (max-width: 660px) {
-    .top-container {
-        display: block;
-        margin: 0 3%;
-    }
-}
-.main-top::after {
-    content: url(../img/top_man.png);
-    position: absolute;
-    top: 56vh;
-    left: 23px;
-}
-@media (max-width: 1250px) {
-    .main-top::after {
-        content: url(../img/top_man-1250.png);
-    }
-}
-@media (max-width: 1030px) {
-    .main-top::after {
-        content: url(../img/top_man-1050.png);
-        top: 450px;
-        left: 60px;
-    }
-}
-@media (max-width: 880px) {
-    .main-top::after {
-        content: url(../img/top_man-800.png);
-        top: 500px;
-        left: 30px;
-    }
-}
-@media (max-width: 660px) {
-    .main-top::after {
-        content: url(../img/top_man-300.png);
-        width: 300px;
-        top: 290px;
-    }
-}
-/* top-container-left */
-.top-container-left {
-    position: relative;
-    width: 100%;
-    margin-left: 50px;
-}
-@media (max-width: 660px) {
-    .top-left {
-        margin-left: 0;
-    }
-}
-.top-left::after {
-    content: "";
-    position: absolute;
-    top: 126px;
-    width: 38%;
-    height: 1px;
-    display: block;
-    border-bottom: 1px solid #fce4e7;
-}
-@media (max-width: 660px) {
-    .top-left::after {
-        width: 35%;
-        top: 35px;
-    }
-}
-.top-left-text {
-    padding-left: 10px;
-    margin: 80px auto 0;
-    color: #fff;
-}
-@media (max-width: 660px) {
-    .top-left-text {
-        margin: 50px auto 0;
-    }
-}
-.title {
-    margin-bottom: 33px;
-    font-size: 25px;
-    text-shadow: 5px 4px 3px rgba(0, 0, 0);
-}
-@media (max-width: 660px) {
-    .title {
-        margin-bottom: 20px;
-        font-size: 20px;
-    }
-}
-h1 {
-    font-family: "せのびレギュラー";
-    margin-bottom: 7px;
-    margin-left: -11px;
-    font-size: 55px;
-    font-weight: normal;
-    text-shadow: 5px 4px 3px rgba(0, 0, 0);
-}
-@media (max-width: 660px) {
-    h1 {
-        margin-bottom: 10px;
-        font-size: 45px;
-    }
-}
-h1 + p {
-    font-family: "せのびレギュラー";
-    font-size: 21px;
-    text-shadow: 4px 3px 2px rgba(0, 0, 0);
-}
-
 /* top-right */
 .top-right {
-    position: absolute;
-    right: 30px;
-}
-
-@media (max-width: 660px) {
-    .top-right {
-        margin-top: 173px;
-    }
+    width: 28%;
+    height: 79vh;
+    background: linear-gradient(#baa68b 0%, #5d5346 100%);
 }
 .top-right-text {
     width: 264px;
-    margin: 229px auto 45px;
-    font-size: 24px;
+    margin: 366px auto 50px;
+    font-size: 26px;
     color: #fff;
     line-height: 1.55;
 }
-@media (max-width: 1030px) {
-    .top-right-text {
-        margin-top: 200px;
-    }
-}
-@media (max-width: 660px) {
-    .top-right-text {
-        width: 100%;
-        margin: 0 auto;
-        font-size: 20px;
-    }
-}
 .top-right-text p {
-    padding-left: 55px;
+    padding-left: 48px;
     text-shadow: 4px 3px 2px rgba(0, 0, 0);
-}
-@media (max-width: 660px) {
-    .top-right-text p {
-        padding-left: 0;
-        text-align: center;
-    }
 }
 .top-right-btn ul {
     text-align: center;
-    list-style: none;
 }
 .top-right-btn ul > li {
     margin-bottom: 20px;
 }
 .top-right-btn a {
     display: inline-block;
-    width: 155px;
-    height: 40px;
-    color: #355469;
-    background: #fff;
-    font-family: "ヒラギノ丸ゴ ProN";
-    font-size: 17px;
-    /* text-shadow: 4px 3px 2px rgba(0, 0, 0, 0.69); */
-    line-height: 40px;
-    box-shadow: 6px 6px 5px rgba(141, 138, 138, 0.16) inset;
     transition: all 0.5s;
-    text-decoration: none;
 }
 .top-right-btn a:hover {
     opacity: 0.6;
 }
-@media (max-width: 660px) {
-    .top-right-btn a {
-        width: 80%;
-    }
-}
-
 
 /* --------------------------------
           main-bottom
@@ -574,19 +197,11 @@ h1 + p {
     height: 45vh;
     position: relative;
 }
-@media (max-width: 1030px) {
+@media screen and (max-width: 768px) {
     #bottom-header {
-        height:  300px;
+        height: 90vh;
     }
 }
-@media (max-width: 599px) {
-    #bottom-header {
-        height:  300px;
-        background-image: url('../img/top_cocktail-sp.png');
-        background-position: center;
-    }
-}
-
 /* scrolldown */
 .scrolldown {
     position: absolute;
@@ -601,12 +216,6 @@ h1 + p {
     color: #eee;
     font-size: 18px;
     letter-spacing: 0.05em;
-}
-@media (max-width: 599px) {
-    .scrolldown span {
-        /* top: -30px; */
-        top: 20px;
-    }
 }
 .scrolldown::after {
     content: "";
@@ -635,29 +244,6 @@ h1 + p {
         opacity: 0;
     }
 }
-@media (max-width: 599px) {
-    @keyframes pathmove {
-        0% {
-            height: 0;
-            /* top: -10px; */
-            top: 44px;
-            opacity: 0;
-        }
-
-        30% {
-            /* height: 30px; */
-            height: 44px;
-            opacity: 1;
-        }
-
-        100% {
-            height: 0;
-            /* top: 20px; */
-            top: 50px;
-            opacity: 0;
-        }
-    }
-}
 
 /* ----- video-ara ----- */
 #video-area {
@@ -668,11 +254,6 @@ h1 + p {
     left: 0;
     bottom: 0;
     overflow: hidden;
-}
-@media (max-width: 599px) {
-    #video-area {
-        display: none;
-    }
 }
 #video {
     position: absolute;
@@ -687,7 +268,7 @@ h1 + p {
 /* ----- bottom-container ----- */
 #bottom-container {
     width: 100%;
-    height: 1570px;
+    height: 1753px;
     display: block !important;
     justify-content: center;
     align-items: center;
@@ -695,205 +276,58 @@ h1 + p {
     background: linear-gradient(#355469 0%, #1b2a35 100%);
     overflow: hidden;
 }
-@media (max-width: 860px) {
-    #bottom-container {
-        height: 1555px;
-    }
-}
-@media (max-width: 599px) {
-    #bottom-container {
-        height: 1550px;
-    }
-}
 /* bottom-tp */
 .bottom-tp {
     max-width: 1197px;
     display: flex;
     justify-content: space-between;
-    padding-top: 275px;
-    padding-left: 110px;
+    padding-top: 303px;
+    padding-left: 63px;
     margin: 0 auto;
 }
-@media (max-width: 1030px) {
-    .bottom-tp {
-        max-width: 800px;
-        padding-left: 0;
-    }
-}
-@media (max-width: 860px) {
-    .bottom-tp {
-        max-width: 400px;
-        padding-top: 120px;
-        flex-direction: column;
-    }
-}
-@media (max-width: 599px) {
-    .bottom-tp {
-        max-width: 300px;
-    }
-}
 .bottom-tp-left {
-    margin-top: 52px;
-    font-size: 23px;
+    margin-top: 60px;
+    font-size: 24px;
     color: #fff;
-}
-@media (max-width: 860px) {
-    .bottom-tp-left {
-        order: 2;
-    }
-}
-@media (max-width: 599px) {
-    .bottom-tp-left {
-        font-size: 20px;
-    }
 }
 .bottom-tp-left > p {
     line-height: 1.7;
 }
 .bottom-tp-left > p + p {
-    margin-top: 35px;
+    margin-top: 48px;
 }
 .bottom-tp-right {
     position: static;
     width: 580px;
     z-index: 10;
 }
-@media (max-width: 1030px)
-{
-    .bottom-tp-right {
-        width: 400px;
-    }
-}
-@media (max-width: 1030px)
-{
-    .bottom-tp-right {
-        order: 1;
-    }
-}
 .bottom-tp-right img {
-    width: 515px;
-}
-@media (max-width: 1030px) {
-    .bottom-tp-right img {
-        width: 400px;
-    }
-}
-@media (max-width: 599px) {
-    .bottom-tp-right img {
-        width: 300px;
-    }
+    width: 100%;
 }
 /* bottom-bt */
 .bottom-bt {
     position: relative;
-    margin-top: 400px;
-}
-@media (max-width: 599px) {
-    .bottom-bt {
-        margin-top: 500px;
-    }
+    margin-top: 462px;
 }
 .bottom-bt::before {
     position: absolute;
     content: "";
-    top: -495px;
-    right: -200px;
-    width: 720px;
-    height: 720px;
+    top: -573px;
+    right: -220px;
+    width: 800px;
+    height: 800px;
     border: 1px solid #fce4e7;
     border-radius: 50%;
-}
-@media (max-width: 1250px) {
-    .bottom-bt::before {
-        width: 680px;
-        height: 680px;
-        right: -260px;
-    }
-}
-@media (max-width: 1050px) {
-    .bottom-bt::before {
-        width: 630px;
-        height: 630px;
-        top: -460px;
-        right: -315px;
-    }
-}
-@media (max-width: 950px) {
-    .bottom-bt::before {
-        width: 500px;
-        height: 500px;
-        top: -330px;
-        right: -265px;
-    }
-}
-@media (max-width: 950px) {
-    .bottom-bt::before {
-        width: 400px;
-        height: 400px;
-        top: -250px;
-        right: -180px;
-    }
-}
-@media (max-width: 599px) {
-    .bottom-bt::before {
-        width: 260px;
-        height: 260px;
-        top: -180px;
-        right: -135px;
-    }
 }
 .bottom-bt::after {
     position: absolute;
     content: "";
-    top: -300px;
-    left: -267px;
-    width: 720px;
-    height: 720px;
+    top: -353px;
+    left: -247px;
+    width: 800px;
+    height: 800px;
     border: 1px solid #fce4e7;
     border-radius: 50%;
-}
-@media (max-width: 1250px) {
-    .bottom-bt::after {
-        width: 680px;
-        height:  680px;
-    }
-}
-@media (max-width: 1050px) {
-    .bottom-bt::after {
-        width: 630px;
-        height:  630px;
-    }
-}
-@media (max-width: 950px) {
-    .bottom-bt::after {
-        width: 500px;
-        height:  500px;
-        top: -170px;
-        left: -230px;
-    }
-}
-@media (max-width: 860px) {
-    .bottom-bt::after {
-        width: 400px;
-        height:  400px;
-        top: -120px;
-        left: -160px;
-    }
-}
-@media (max-width: 710px) {
-    .bottom-bt::after {
-        width: 400px;
-        height:  400px;
-        top: -160px;
-    }
-}
-@media (max-width: 599px) {
-    .bottom-bt::after {
-        width: 260px;
-        height:  260px;
-        top: -400px;
-        left: -110px;
-    }
 }
 .bottom-bt-contents {
     display: inline-block;
@@ -901,142 +335,39 @@ h1 + p {
     top: 91px;
     left: 50%;
     transform: translateX(-52%);
-    z-index: 10;
-}
-@media (max-width: 860px) {
-    .bottom-bt-contents {
-        transform: translateX(-35%);
-    }
-}
-@media (max-width: 860px) {
-    .bottom-bt-contents img {
-        width: 80%;
-        text-align: center;
-    }
 }
 .bottom-bt-contents::after {
     position: absolute;
     content: "";
-    bottom: -745px;
-    right: -407px;
-    width: 720px;
-    height: 720px;
+    bottom: -827px;
+    right: -473px;
+    width: 800px;
+    height: 800px;
     border: 1px solid #fce4e7;
     border-radius: 50%;
 }
-@media (max-width: 1250px) {
-    .bottom-bt-contents::after {
-        width: 680px;
-        height: 680px;
-        right:  -350px;
-    }
-}
-@media (max-width: 1050px) {
-    .bottom-bt-contents::after {
-        width: 630px;
-        height: 630px;
-        right:  -335px;
-        bottom: -680px;
-    }
-}
-@media (max-width: 950px) {
-    .bottom-bt-contents::after {
-        width: 500px;
-        height: 500px;
-        right:  -275px;
-        bottom: -520px;
-    }
-}
-@media (max-width: 860px) {
-    .bottom-bt-contents::after {
-        width: 400px;
-        height: 400px;
-        right:  -110px;
-        bottom: -450px;
-    }
-}
-@media (max-width: 599px) {
-    .bottom-bt-contents::after {
-        width: 260px;
-        height: 260px;
-        right:  45px;
-        bottom: -280px;
-    }
-}
 .bt-contents-search {
     position: absolute;
-    top: -85px;
-    left: -185px;
-}
-@media (max-width: 860px) {
-    .bt-contents-search {
-        left: -210px;
-    }
-}
-@media (max-width: 710px) {
-    .bt-contents-search {
-        left: -155px;
-    }
-}
-@media (max-width: 599px) {
-    .bt-contents-search {
-        top: -350px;
-        left: -40px;
-    }
+    top: -97px;
+    left: -225px;
 }
 .bt-contents-memory {
     position: absolute;
-    top: -28px;
-    right: -230px;
-}
-@media (max-width: 860px) {
-    .bt-contents-memory {
-        right: -130px;
-    }
-}
-@media (max-width: 760px) {
-    .bt-contents-memory {
-        right: -80px;
-    }
-}
-@media (max-width: 599px) {
-    .bt-contents-memory {
-        width: 100%;
-        top: -140px;
-        right: 50px;
-    }
+    top: -35px;
+    right: -254px;
 }
 .bt-contents-memo {
     position: absolute;
-    bottom: -130px;
-    right: 50px;
+    bottom: -126px;
+    right: 53px;
     z-index: 10;
-}
-@media (max-width: 860px) {
-    .bt-contents-memo {
-        width: 100%;
-        right: 15px;
-    }
-}
-@media (max-width: 599px) {
-    .bt-contents-memo {
-        bottom: -120px;
-        right: auto;
-    }
 }
 .bt-contents-search p,
 .bt-contents-memory p,
 .bt-contents-memo p {
     color: #fff;
-    font-size: 24px;
+    font-size: 25px;
     text-shadow: 4px 3px 2px rgba(0, 0, 0);
-}
-@media (max-width: 860px) {
-    .bt-contents-search p,
-    .bt-contents-memory p,
-    .bt-contents-memo p {
-        font-size: 20px;
-    }
 }
 .bt-contents-search p a,
 .bt-contents-memory p a,
@@ -1045,13 +376,6 @@ h1 + p {
     text-decoration: none;
     font-size: 23px;
     transition: all 0.5s;
-}
-@media (max-width: 860px) {
-    .bt-contents-search p a,
-    .bt-contents-memory p a,
-    .bt-contents-memo p a {
-        font-size: 20px;
-    }
 }
 .bt-contents-search p a:hover,
 .bt-contents-memory p a:hover,
@@ -1065,8 +389,12 @@ h1 + p {
     z-index: 10;
     width: 100%;
     height: 100px;
-    padding: 0 5%;
-    background: linear-gradient(#00577c 0%,#004562 0%,#003f59 0%,#002c3e 100%);
+    background: linear-gradient(
+        #00577c 0%,
+        #004562 0%,
+        #003f59 0%,
+        #002c3e 100%
+    );
     display: flex;
     flex-direction: column;
     justify-content: center;
@@ -1085,9 +413,4 @@ h1 + p {
     font-family: "Hiragino Kaku Gothic ProN";
     font-size: 15px;
     font-weight: bold;
-}
-@media (max-width: 599px) {
-    .footer p {
-        font-size: 10px;
-    }
 }
