--- a/public/css/top.css
+++ b/public/css/top.css
@@ -66,18 +66,65 @@ body {
     position: relative;
     display: flex;
 }
+@media (max-width: 660px){
+    .main-top{
+        flex-direction: column;
+}
+}
 .main-top::after {
     content: url(../img/top_man.png);
     position: absolute;
     top: 492px;
     left: 23px;
 }
+@media (max-width: 1250px){
+.main-top::after {
+    content: url(../img/top_man-1250.png);
+}
+}
+@media (max-width: 1150px){
+.main-top::after {
+    content: url(../img/top_man-1050.png);
+    top: 450px;
+    left: 60px;
+}
+}
+@media (max-width: 880px){
+.main-top::after {
+    content: url(../img/top_man-800.png);
+    top: 500px;
+    left: 30px;
+}
+}
+@media (max-width: 660px){
+.main-top::after {
+    content: url(../img/top_man-300.png);
+    width: 300px;
+    top: 350px;
+}
+}
 /* top-left */
 .top-left {
     position: relative;
     width: 78%;
-    height: 79vh;
+    height: 650px;
     background-color: #355469;
+}
+@media (max-width: 1150px){
+    .top-left{
+        width: 70%;
+}
+}
+@media (max-width: 880px){
+    .top-left{
+        width: 65%;
+}
+}
+@media (max-width: 660px){
+    .top-left{
+        width: 100%;
+        height: 500px;
+}
 }
 .top-left nav {
     position: absolute;
@@ -86,11 +133,6 @@ body {
     height: 100px;
     margin: 0 auto;
     font-family: "Hiragino Kaku Gothic ProN";
-}
-@media (max-width: 1500px) {
-    .top-left nav {
-        margin-left: 3%;
-    }
 }
 .item {
     max-width: 1055px;
@@ -129,20 +171,102 @@ body {
     display: block;
     border-bottom: 1px solid #fce4e7;
 }
+@media (max-width: 1250px){
+    .top-left::after{
+        top: 248px;
+        width: 5340px;
+}
+}
+@media (max-width: 1150px){
+    .top-left::after{
+        top: 227px;
+        width: 555px;
+}
+}
+@media (max-width: 880px){
+    .top-left::after{
+        top: 187px;
+        width: 270px;
+}
+}
+@media (max-width: 660px){
+    .top-left::after{
+        top: 158px;
+        width: 250px;
+}
+}
 .top-left-text {
     max-width: 900px;
     margin: 210px auto;
     color: #fff;
 }
 @media (max-width: 1500px) {
-    .top-left-text {
+        .top-left-text {
         padding-left: 3%;
     }
 }
+@media (max-width: 1250px){
+    .top-left-text{
+        margin: 200px auto;
+}
+}
+@media (max-width: 1150px){
+    .top-left-text{
+        margin: 180px auto;
+}
+}
+@media (max-width: 880px){
+    .top-left-text{
+        margin: 140px auto;
+}
+}
+@media (max-width: 660px){
+    .top-left-text{
+        margin: 100px auto;
+}
+}
+
+
+@media (max-width: 1250px){
+         {
+    }
+    }
+@media (max-width: 1150px){
+         {
+    }
+    }
+@media (max-width: 880px){
+         {
+    }
+    }
+@media (max-width: 660px){
+         {
+    }
+    }
 .title {
     margin-bottom: 51px;
     font-size: 25px;
     text-shadow: 5px 4px 3px rgba(0, 0, 0);
+}
+@media (max-width: 1250px){
+    .title{
+        font-size: 23px;
+}
+}
+@media (max-width: 1150px){
+    .title{
+        font-size: 21px;
+}
+}
+@media (max-width: 880px){
+    .title{
+        font-size: 18px;
+}
+}
+@media (max-width: 660px){
+    .title{
+        font-size: 15px;
+}
 }
 h1 {
     font-family: "せのびレギュラー";
@@ -152,6 +276,26 @@ h1 {
     font-weight: normal;
     text-shadow: 5px 4px 3px rgba(0, 0, 0);
 }
+@media (max-width: 1250px){
+    h1{
+        font-size: 51px;
+}
+}
+@media (max-width: 1150px){
+    h1{
+        font-size: 46px;
+}
+}
+@media (max-width: 880px){
+    h1{
+        font-size: 40px;
+}
+}
+@media (max-width: 660px){
+    h1{
+        font-size: 34px;
+}
+}
 h1 + p {
     font-family: "せのびレギュラー";
     font-size: 21px;
@@ -160,8 +304,33 @@ h1 + p {
 /* top-right */
 .top-right {
     width: 28%;
-    height: 79vh;
+    height: 650px;
     background: linear-gradient(#baa68b 0%, #5d5346 100%);
+}
+@media (max-width: 1150px){
+    .top-right{
+        width: 30%;
+}
+}
+@media (max-width: 880px){
+    .top-right{
+        width: 35%;
+}
+}
+@media (max-width: 660px){
+    .top-right{
+        width: 100%;
+        height: 200px;
+        display: flex;
+        justify-content: center;
+}
+}
+@media (max-width: 425px){
+    .top-right{
+        height: 260px;
+        flex-direction: column;
+        justify-content: center;
+}
 }
 .top-right-text {
     width: 264px;
@@ -170,9 +339,36 @@ h1 + p {
     color: #fff;
     line-height: 1.55;
 }
+@media (max-width: 880px){
+    .top-right-text {
+        font-size: 20px;
+}
+}
+@media (max-width: 660px){
+    .top-right-text {
+        font-size: 15px;
+        margin: auto 30px;
+}
+}
+@media (max-width: 660px){
+    .top-right-btn{
+        margin: auto 20px;
+    }
+}
+@media (max-width: 425px){
+    .top-right-btn{
+        margin: auto;
+    }
+}
 .top-right-text p {
     padding-left: 48px;
     text-shadow: 4px 3px 2px rgba(0, 0, 0);
+}
+@media (max-width: 425px){
+    .top-right-text p{
+        text-align: center;
+        margin: auto;
+    }
 }
 .top-right-btn ul {
     text-align: center;
@@ -182,7 +378,17 @@ h1 + p {
 }
 .top-right-btn a {
     display: inline-block;
+    width: 155px;
+    height: 40px;
+    color: #fff;
+    background: #355469;
+    font-family: "ヒラギノ丸ゴ ProN";
+    font-size: 17px;
+    text-shadow: 4px 3px 2px rgb(0 0 0 / 69%);
+    line-height: 40px;
+    box-shadow: 6px 6px 5px rgb(0 0 0 / 16%) inset;
     transition: all 0.5s;
+    text-decoration: none;
 }
 .top-right-btn a:hover {
     opacity: 0.6;
