--- a/public/css/top.css
+++ b/public/css/top.css
@@ -10,6 +10,7 @@
     text-align: center;
 }
 #splash_logo {
+    display: none;
     position: absolute;
     top: 50%;
     left: 50%;
@@ -17,6 +18,11 @@
 }
 #splash_logo svg {
     width: 635px;
+}
+@media (max-width: 599px) {
+    #splash_logo svg {
+        width: 350px;
+    }
 }
 #mask .st0 {
     fill: none;
@@ -56,6 +62,9 @@ body {
     text-align: left !important;
     overflow: hidden;
     z-index: 1;
+}
+.shadow-sm {
+    box-shadow: none !important;
 }
 
 /* ------------ main ------------ */
@@ -366,6 +375,7 @@ h1 + p {
 }
 @media (max-width: 425px){
     .top-right-text p{
+    padding-left: 0;
         text-align: center;
         margin: auto;
     }
