--- a/public/css/auth.css
+++ b/public/css/auth.css
@@ -16,10 +16,16 @@
 }
 .container {
     position: relative;
-    height: 100vh;
+    height: 100%;
     padding-top: 70px;
+    padding-bottom: 70px;
     background: linear-gradient(#355469 0%, #1b2a35 100%);
     color: #fff;
+}
+@media (max-width: 500px) {
+    .container {
+        padding-top: 30px;
+    }
 }
 .auth-text {
     margin-bottom: 23px;
@@ -27,9 +33,20 @@
     font-size: 18px;
     text-align: center;
 }
+@media (max-width: 500px) {
+    .auth-text {
+        font-size: 20px;
+    }
+}
 h1 {
     width: 90px;
     margin: 0 auto 63px;
+}
+@media (max-width: 500px) {
+    h1 {
+        width: 110px;
+        margin-bottom: 40px;
+    }
 }
 h1 a {
     display: block;
@@ -45,8 +62,20 @@ h1 a {
     width: 310px;
     margin: 0 auto;
 }
-.form-group {
+@media (max-width: 500px) {
+    .card-body {
+        width: 80%;
+    }
+}
+.form-group,
+.form-check {
     padding-top: 24px;
+}
+@media (max-width: 500px) {
+    .form-group,
+    .form-check {
+        padding-top: 15px;
+    }
 }
 .form-group.tp {
     padding: 0;
@@ -55,6 +84,14 @@ h1 a {
     font-family: "Hiragino Kaku Gothic ProN";
     font-size: 15px;
     color: #fce4e7;
+}
+@media (max-width: 500px) {
+    .form-group label {
+        font-size: 18px;
+    }
+}
+.form-check .form-check-label {
+    opacity: 0.8;
 }
 .form-group .col-md-6 {
     margin-top: 10px;
@@ -65,10 +102,30 @@ input {
     border: 0;
     box-shadow: 6px 6px 5px rgba(0, 0, 0, 0.16) inset;
     padding-left: 8px;
+    box-sizing: border-box;
+}
+@media (max-width: 500px) {
+    input {
+        width: 100%;
+    }
+}
+.form-check-input {
+    width: 20px;
+}
+.form-group small {
+    display: inline-block;
+    padding-top: 10px;
+    font-size: 13px;
+    opacity: 0.8;
 }
 .submit-btn {
     width: 70%;
     margin: 0 auto;
+}
+@media (max-width: 500px) {
+    .submit-btn {
+        width: 100%;
+    }
 }
 .submit-btn button {
     width: 100%;
@@ -86,11 +143,16 @@ input {
     border-radius: 12px;
     transition: all 0.5s;
 }
+@media (max-width: 500px) {
+    .submit-btn button {
+        margin-top: 20px;
+    }
+}
 button:hover {
     opacity: 0.7;
 }
 .card-footer {
-    width: 350px;
+    max-width: 350px;
     margin: 0 auto;
     text-align: center;
 }
@@ -120,6 +182,16 @@ button:hover {
     box-shadow: 6px 6px 5px rgba(0, 0, 0, 0.16) inset;
     transition: all 0.5s;
 }
+@media (max-width: 500px) {
+    .card-footer a {
+        width:  100%;
+    }
+}
+@media (max-width: 450px) {
+    .card-footer a {
+        width:  80%;
+    }
+}
 .card-footer a:hover {
     opacity: 0.7;
 }
@@ -146,6 +218,11 @@ button:hover {
     transform: translate(-50%, -50%);
     z-index: -1;
 }
+@media (max-width: 835px) {
+    #register::after {
+        content: none;
+    }
+}
 #register .card {
     position: static;
     z-index: 10;
@@ -154,6 +231,9 @@ button:hover {
 /* --------------------------------------------------------------------
                                 login
 -------------------------------------------------------------------- */
+#login.container {
+    height: 100%;
+}
 #login .card {
     position: relative;
     z-index: 10;
@@ -161,13 +241,18 @@ button:hover {
 #login .card::after {
     content: "";
     position: absolute;
-    top: 65px;
+    top: 50px;
     left: 50%;
     transform: translateX(-50%);
     width: 717px;
-    height: 480px;
+    height: 515px;
     border: 1px solid #fce4e7;
     z-index: -1;
+}
+@media (max-width: 750px) {
+    #login .card::after {
+        content: none;
+    }
 }
 #login .submit-btn {
     padding-top: 0;
