--- a/public/css/edit.css
+++ b/public/css/edit.css
@@ -457,6 +457,28 @@ html { scroll-behavior: smooth;}
     margin: 24px 10px 0 10px;
     transition: all 0.3s;
 }
+@media screen and (max-width:1100px){
+    .derete-btn {
+        width: 130px;
+        height: 32px;
+        font-size: 17px;
+    }
+}
+@media screen and (max-width:960px){
+    .derete-btn {
+        width: 120px;
+        height: 28px;
+        margin: 30px 0;
+        font-size: 16px;
+    }
+}
+@media screen and (max-width:520px){
+    .derete-btn {
+        width: 100px;
+        height: 24px;
+        font-size: 12px;
+    }
+}
 
 .derete-btn:hover {
     background-color: #bc4b4bd8;
